megalophobia project traduction completed

--- a/megalophobia.html
+++ b/megalophobia.html
@@ -67,20 +67,20 @@
           <!-- HERO -->
           <section class="techHero">
             <div class="heroLeft">
-              <h1 class="heroTitle">Megalophobia</h1>
+              <h1 class="heroTitle" data-i18="projectSingle.mega.hero.title">
+                Megalophobia
+              </h1>
 
-              <p class="heroDescription">
+              <p class="heroDescription" data-i18="projectSingle.mega.hero.description">
                 Megalophobia est un jeu d’horreur à la première personne ou le joueur se réveille sur une plage en plein
-                milieu de la nuit. Il fait froid et il n’y a aucun signe de vie humaine à l’exception de feux de camps
-                éparpillés un peu partout. Le but est de s’aventurer dans la forêt pour tuer le monstre qui hante ces
-                lieux.
+                milieu de la nuit...
               </p>
 
               <ul class="heroMeta">
-                <li>Unity C#</li>
-                <li>Ennemis AI</li>
-                <li>Game Jam</li>
-                <li>5 Participants</li>
+                <li data-i18="projectSingle.mega.meta.tech">Unity C#</li>
+                <li data-i18="projectSingle.mega.meta.ai">Ennemis AI</li>
+                <li data-i18="projectSingle.mega.meta.type">Game Jam</li>
+                <li data-i18="projectSingle.mega.meta.team">5 Participants</li>
               </ul>
             </div>
 
@@ -112,79 +112,49 @@
             </div>
 
             <div class="breakdownContent">
-              <h2 class="breakdownTitle">Mon rôle</h2>
+              <h2 class="breakdownTitle" data-i18="projectSingle.mega.role.title">Mon rôle</h2>
 
-              <p>
-                Mon rôle consistait en la programmation C#. J’ai développé l’intelligence artificielle du gros monstre
-                et des petites araignées, en intégrant leurs animations. J’ai également programmé l’interaction avec les
-                objets du jeu, comme les balles et les feux de camp pour rallumer la torche, et j’ai géré l’affichage
-                des textes d’interaction. Enfin, j’étais responsable de la mise en place et du fonctionnement de l’Input
-                System de Unity.
-              </p>
+              <p data-i18="projectSingle.mega.role.text"></p>
             </div>
           </section>
 
-          <!-- FEATURES -->
           <section class="techFeatures">
-            <h2 class="sectionTitle">Systèmes clés</h2>
+            <h2 class="sectionTitle" data-i18="projectSingle.mega.features.title">Systèmes clés</h2>
 
             <div class="featuresGrid">
 
-              <article class="featureCard ">
+              <article class="featureCard">
                 <img class="featureImage" src="assets/Megalophobia/images/brainstorm_megalophobia.webp" alt="">
-                <h3 class="featureTitle">Brainstorm</h3>
-
-                <p>
-                  Tout d’abord, comme pour tout bon projet, nous avons commencé par un remue-méninge pour explorer des
-                  concepts et des mécaniques de jeu. Nous avons ensuite combiné plusieurs idées pour créer un jeu
-                  réalisable en trois jours et amusant à jouer : un jeu d’horreur où le joueur doit traquer et éliminer
-                  un monstre dans la forêt.
-                </p>
-
+                <h3 class="featureTitle" data-i18="projectSingle.mega.feature.brainstorm.title">Brainstorm</h3>
+                <p data-i18="projectSingle.mega.feature.brainstorm.text"></p>
               </article>
 
-              <article class="featureCard ">
+              <article class="featureCard">
                 <img class="featureImage" src="assets/Megalophobia/images/ai_megalophobia_defi.webp" alt="">
-                <h3 class="featureTitle">Enemy AI</h3>
-
-                <p>
-                  N’ayant jamais travaillé sur de l’intelligence artificielle, je me suis lancé le défi de créer deux
-                  ennemis avec des comportements réalistes. J’ai étudié de nombreuses documentations et tutoriels pour
-                  comprendre les bonnes pratiques. Au final, j’ai réussi à produire des AI fluides.
-                </p>
+                <h3 class="featureTitle" data-i18="projectSingle.mega.feature.ai.title">Enemy AI</h3>
+                <p data-i18="projectSingle.mega.feature.ai.text"></p>
               </article>
 
-              <article class="featureCard ">
+              <article class="featureCard">
                 <img class="featureImage" src="assets/Megalophobia/images/gameplay_megalophobia.webp" alt="">
-                <h3 class="featureTitle">Mécaniques d’interaction et d’UI</h3>
-
-                <p>
-                  J’ai développé les interactions avec les objets du jeu, comme les balles et les feux de camp qui
-                  rallument la torche, en veillant à ce que chaque action soit intuitive pour le joueur. J’ai également
-                  géré l’affichage des indications contextuelles et la navigation via l’Input System de Unity, assurant
-                  une expérience fluide et cohérente.
-                </p>
+                <h3 class="featureTitle" data-i18="projectSingle.mega.feature.interaction.title">Mécaniques d’interaction et d’UI</h3>
+                <p data-i18="projectSingle.mega.feature.interaction.text"></p>
               </article>
 
-              <article class="featureCard ">
+              <article class="featureCard">
                 <img class="featureImage" src="assets/Megalophobia/images/ui_megalophobia.webp" alt="">
-                <h3 class="featureTitle">Design UI</h3>
-
-                <p>
-                  Le prototype de menu existait, mais il manquait d’esthétique. J’ai créé un design cohérent avec le
-                  jeu, dessiné les boutons avec l’aide d’une collègue, et intégré le tout dans Unity, crédits inclus.
-                </p>
+                <h3 class="featureTitle" data-i18="projectSingle.mega.feature.ui.title">Design UI</h3>
+                <p data-i18="projectSingle.mega.feature.ui.text"></p>
               </article>
 
             </div>
           </section>
 
 
-          <!-- CREDITS -->
           <section class="techCredits">
 
             <div class="creditsGroup">
-              <h3 class="creditsRole">Programmeurs</h3>
+              <h3 class="creditsRole" data-i18="projectSingle.mega.credits.programmers">Programmeurs</h3>
               <ul class="creditsNames">
                 <li>Mathieu-Daniel Gariépy</li>
                 <li>Marc-André Jalbert-Blais</li>
@@ -193,7 +163,7 @@
             </div>
 
             <div class="creditsGroup">
-              <h3 class="creditsRole">Artistes</h3>
+              <h3 class="creditsRole" data-i18="projectSingle.mega.credits.artists">Artistes</h3>
               <ul class="creditsNames">
                 <li>Jean-Marie Gariépy</li>
                 <li>Audrey Langlois</li>
@@ -201,7 +171,7 @@
             </div>
 
             <div class="creditsGroup">
-              <h3 class="creditsRole">Level designers</h3>
+              <h3 class="creditsRole" data-i18="projectSingle.mega.credits.level">Level designers</h3>
               <ul class="creditsNames">
                 <li>Gabriel Gauthier</li>
                 <li>Audrey Langlois</li>
@@ -209,7 +179,7 @@
             </div>
 
             <div class="creditsGroup">
-              <h3 class="creditsRole">Designers sonore</h3>
+              <h3 class="creditsRole" data-i18="projectSingle.mega.credits.sound">Designers sonore</h3>
               <ul class="creditsNames">
                 <li>Jean-Marie Gariépy</li>
               </ul>
