--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="hero__socials">
                         <a href="https://www.linkedin.com/in/gabrielgauthier-629/" aria-label="LinkedIn" target="_blank"><img src="assets/Non-Project/Linkedin.png" alt=""></a>
                         <a href="mailto:gab.gauthier2002@gmail.com" aria-label="Email" target="_blank"><img src="assets/Non-Project/Email.png" alt=""></a>
-                        <a href="https://github.com/Gab629" aria-label="Github" z><img src="assets/Non-Project/github.png" alt=""></a>
+                        <a href="https://github.com/Gab629" aria-label="Github" target="_blank"><img src="assets/Non-Project/github.png" alt=""></a>
                     </div>
             
                     <a href="assets/Non-Project/GabrielGauthierCV-FR.pdf" target="_blank" class="btn-primary" data-i18="hero.cta" data-i18-href="hero.cvLink">Visualisez mon
