Removing useless comments

--- a/megalophobia.html
+++ b/megalophobia.html
@@ -64,7 +64,7 @@
 
         <section class="projectStory projectStoryTech">
 
-          <!-- HERO -->
+
           <section class="techHero">
             <div class="heroLeft">
               <h1 class="heroTitle" data-i18="projectSingle.mega.hero.title">
@@ -105,7 +105,6 @@
             </div>
           </section>
 
-          <!-- BREAKDOWN : TEMPLATE 1 -->
           <section class="techBreakdownArticle">
             <div class="breakdownMedia">
               <img src="assets/Megalophobia/images/ai_megalophobia.webp" alt="">
@@ -137,7 +136,8 @@
 
               <article class="featureCard">
                 <img class="featureImage" src="assets/Megalophobia/images/gameplay_megalophobia.webp" alt="">
-                <h3 class="featureTitle" data-i18="projectSingle.mega.feature.interaction.title">Mécaniques d’interaction et d’UI</h3>
+                <h3 class="featureTitle" data-i18="projectSingle.mega.feature.interaction.title">Mécaniques
+                  d’interaction et d’UI</h3>
                 <p data-i18="projectSingle.mega.feature.interaction.text"></p>
               </article>
 
