--- a/projects.html
+++ b/projects.html
@@ -154,102 +154,104 @@
 
                 <div class="projectGrid">
 
-  <!-- REX MONTIS -->
-  <article class="projectCard has-video" data-scrolly="fromBottom">
-    <div class="projectMedia media-container" data-component="ProjectVideo">
-      <img src="assets/RexMontis/images/rexmontis-project-card.webp" alt="Rex Montis" />
-      <video src="assets/RexMontis/videos/RexMontis.mp4" muted loop playsinline preload="auto"></video>
-    </div>
+                    <article class="projectCard has-video" data-scrolly="fromBottom">
+                        <div class="projectMedia media-container" data-component="ProjectVideo">
+                            <img src="assets/RexMontis/images/rexmontis-project-card.webp" alt="Rex Montis" />
+                            <video src="assets/RexMontis/videos/RexMontis.mp4" muted loop playsinline
+                                preload="auto"></video>
+                        </div>
 
-    <h3 class="projectTitle" data-i18="projects.rexmontis.title">Rex Montis</h3>
-    <p class="projectMeta" data-i18="projects.rexmontis.meta">
-      Jeu de combat multijoueur <br /> Unity C#
-    </p>
-    <p class="projectDescription" data-i18="projects.rexmontis.description">
-      Ce jeu a été présenté lors de l’évènement Chaos média 2021...
-    </p>
-    <a href="rexMontis.html" class="projectButton" data-i18="projects.rexmontis.cta">
-      Voir le projet
-    </a>
-  </article>
+                        <h3 class="projectTitle" data-i18="projects.rexmontis.title">Rex Montis</h3>
+                        <p class="projectMeta" data-i18="projects.rexmontis.meta">
+                            Jeu de combat multijoueur <br /> Unity C#
+                        </p>
+                        <p class="projectDescription" data-i18="projects.rexmontis.description">
+                            Ce jeu a été présenté lors de l’évènement Chaos média 2021...
+                        </p>
+                        <a href="rexMontis.html" class="projectButton" data-i18="projects.rexmontis.cta">
+                            Voir le projet
+                        </a>
+                    </article>
 
-  <!-- LATENCY -->
-  <article class="projectCard has-video" data-scrolly="fromBottom">
-    <div class="projectMedia media-container" data-component="ProjectVideo">
-      <img src="assets/Latency/images/latency-project-card.webp" alt="Latency" />
-      <video src="assets/Latency/videos/Latency.mp4" muted loop playsinline preload="auto"></video>
-    </div>
 
-    <h3 class="projectTitle" data-i18="projects.latency.title">Latency</h3>
-    <p class="projectMeta" data-i18="projects.latency.meta">
-      Jeu de stratégie en temps réel <br /> Unity C#
-    </p>
-    <p class="projectDescription" data-i18="projects.latency.description">
-      Nous avons créé un jeu vidéo fonctionnel et amusant...
-    </p>
-    <a href="latency.html" class="projectButton" data-i18="projects.latency.cta">
-      Voir le projet
-    </a>
-  </article>
+                    <article class="projectCard has-video" data-scrolly="fromBottom">
+                        <div class="projectMedia media-container" data-component="ProjectVideo">
+                            <img src="assets/Latency/images/latency-project-card.webp" alt="Latency" />
+                            <video src="assets/Latency/videos/Latency.mp4" muted loop playsinline
+                                preload="auto"></video>
+                        </div>
 
-  <!-- CARNAVAL VR -->
-  <article class="projectCard has-video" data-scrolly="fromBottom">
-    <div class="projectMedia media-container" data-component="ProjectVideo">
-      <img src="assets/Carnaval/images/carnaval-project-card.webp" alt="Carnaval VR" />
-      <video src="assets/Carnaval/videos/CarnavalVR.mp4" muted loop playsinline preload="auto"></video>
-    </div>
+                        <h3 class="projectTitle" data-i18="projects.latency.title">Latency</h3>
+                        <p class="projectMeta" data-i18="projects.latency.meta">
+                            Jeu de stratégie en temps réel <br /> Unity C#
+                        </p>
+                        <p class="projectDescription" data-i18="projects.latency.description">
+                            Nous avons créé un jeu vidéo fonctionnel et amusant...
+                        </p>
+                        <a href="latency.html" class="projectButton" data-i18="projects.latency.cta">
+                            Voir le projet
+                        </a>
+                    </article>
 
-    <h3 class="projectTitle" data-i18="projects.carnavalvr.title">Carnaval VR</h3>
-    <p class="projectMeta" data-i18="projects.carnavalvr.meta">
-      Jeu en réalité virtuelle <br /> Unity C#
-    </p>
-    <p class="projectDescription" data-i18="projects.carnavalvr.description">
-      Voici mon premier jeu en réalité virtuelle...
-    </p>
-    <a href="carnaval.html" class="projectButton" data-i18="projects.carnavalvr.cta">
-      Voir le projet
-    </a>
-  </article>
+                    <article class="projectCard has-video" data-scrolly="fromBottom">
+                        <div class="projectMedia media-container" data-component="ProjectVideo">
+                            <img src="assets/Carnaval/images/carnaval-project-card.webp" alt="Carnaval VR" />
+                            <video src="assets/Carnaval/videos/CarnavalVR.mp4" muted loop playsinline
+                                preload="auto"></video>
+                        </div>
 
-  <!-- LIVRAISON ROYALE -->
-  <article class="projectCard has-video" data-scrolly="fromBottom">
-    <div class="projectMedia media-container" data-component="ProjectVideo">
-      <img src="assets/LivraisonRoyale/images/livraison-project-card.webp" alt="Livraison Royale" />
-      <video src="assets/LivraisonRoyale/videos/Livraison Royale.mp4" muted loop playsinline preload="auto"></video>
-    </div>
+                        <h3 class="projectTitle" data-i18="projects.carnavalvr.title">Carnaval VR</h3>
+                        <p class="projectMeta" data-i18="projects.carnavalvr.meta">
+                            Jeu en réalité virtuelle <br /> Unity C#
+                        </p>
+                        <p class="projectDescription" data-i18="projects.carnavalvr.description">
+                            Voici mon premier jeu en réalité virtuelle...
+                        </p>
+                        <a href="carnaval.html" class="projectButton" data-i18="projects.carnavalvr.cta">
+                            Voir le projet
+                        </a>
+                    </article>
 
-    <h3 class="projectTitle" data-i18="projects.livraisonroyale.title">Livraison Royale</h3>
-    <p class="projectMeta" data-i18="projects.livraisonroyale.meta">
-      Jeu de plateforme 3D <br /> Unity C#
-    </p>
-    <p class="projectDescription" data-i18="projects.livraisonroyale.description">
-      Voici un jeu que j’ai réalisé lors de mon premier Game Jam...
-    </p>
-    <a href="livraison.html" class="projectButton" data-i18="projects.livraisonroyale.cta">
-      Voir le projet
-    </a>
-  </article>
+                    <article class="projectCard has-video" data-scrolly="fromBottom">
+                        <div class="projectMedia media-container" data-component="ProjectVideo">
+                            <img src="assets/LivraisonRoyale/images/livraison-project-card.webp"
+                                alt="Livraison Royale" />
+                            <video src="assets/LivraisonRoyale/videos/Livraison Royale.mp4" muted loop playsinline
+                                preload="auto"></video>
+                        </div>
 
-  <!-- MÉGALOPHOBIA -->
-  <article class="projectCard has-video" data-scrolly="fromBottom">
-    <div class="projectMedia media-container" data-component="ProjectVideo">
-      <img src="assets/Megalophobia/images/megalophobia-project-card.webp" alt="Mégalophobia" />
-      <!-- <video src="assets/videos/Bolt'n'PunchGameplayTrailer.mp4" muted loop playsinline preload="auto"></video> -->
-    </div>
+                        <h3 class="projectTitle" data-i18="projects.livraisonroyale.title">Livraison Royale</h3>
+                        <p class="projectMeta" data-i18="projects.livraisonroyale.meta">
+                            Jeu de plateforme 3D <br /> Unity C#
+                        </p>
+                        <p class="projectDescription" data-i18="projects.livraisonroyale.description">
+                            Voici un jeu que j’ai réalisé lors de mon premier Game Jam...
+                        </p>
+                        <a href="livraison.html" class="projectButton" data-i18="projects.livraisonroyale.cta">
+                            Voir le projet
+                        </a>
+                    </article>
 
-    <h3 class="projectTitle" data-i18="projects.megalophobia.title">Mégalophobia</h3>
-    <p class="projectMeta" data-i18="projects.megalophobia.meta">
-      Jeu d'horreur en 3D <br /> Unity C#
-    </p>
-    <p class="projectDescription" data-i18="projects.megalophobia.description">
-      Jeu réalisé durant le Coding Block Game Jam 2022...
-    </p>
-    <a href="megalophobia.html" class="projectButton" data-i18="projects.megalophobia.cta">
-      Voir le projet
-    </a>
-  </article>
 
-</div>
+                    <article class="projectCard has-video" data-scrolly="fromBottom">
+                        <div class="projectMedia media-container" data-component="ProjectVideo">
+                            <img src="assets/Megalophobia/images/megalophobia-project-card.webp" alt="Mégalophobia" />
+                            <!-- <video src="assets/videos/Bolt'n'PunchGameplayTrailer.mp4" muted loop playsinline preload="auto"></video> -->
+                        </div>
+
+                        <h3 class="projectTitle" data-i18="projects.megalophobia.title">Mégalophobia</h3>
+                        <p class="projectMeta" data-i18="projects.megalophobia.meta">
+                            Jeu d'horreur en 3D <br /> Unity C#
+                        </p>
+                        <p class="projectDescription" data-i18="projects.megalophobia.description">
+                            Jeu réalisé durant le Coding Block Game Jam 2022...
+                        </p>
+                        <a href="megalophobia.html" class="projectButton" data-i18="projects.megalophobia.cta">
+                            Voir le projet
+                        </a>
+                    </article>
+
+                </div>
 
                 <div class="particles"></div>
             </section>
